--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 VERSION=$(shell dpkg-parsechangelog | sed -ne 's/^Version: \(.*\)/\1/p')
 
 %:
-	dh $@ --with python-support
+	dh $@ --with python2
 
 override_dh_auto_configure:
 	./bootstrap.sh
