--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,6 @@
 #!/usr/bin/make -f
 
+PYVERS := $(shell pyversions -r)
 VERSION=$(shell dpkg-parsechangelog | sed -ne 's/^Version: \(.*\)/\1/p')
 
 %:
@@ -12,5 +13,12 @@ override_dh_auto_configure:
 	thrift --gen perl --out perl if/fb303.thrift
 
 override_dh_auto_build:
-	dh_auto_build
+	cd cpp && make install DESTDIR=$(CURDIR)/tmp
 	cd java && ant -Dfb303.final.name=fb303-${VERSION}
+
+override_dh_auto_install:
+	cd $(CURDIR)/py && \
+	for py in $(PYVERS); do \
+		$$py setup.py --root=$(CURDIR)/debian/python-fb303--prefix=/usr \
+			--install-layout=deb \
+	done
