--- a/debian/rules
+++ b/debian/rules
@@ -19,8 +19,8 @@ override_dh_auto_build:
 override_dh_auto_install:
 	cd $(CURDIR)/py && \
 	for py in $(PYVERS); do \
-		$$py setup.py --root=$(CURDIR)/debian/python-fb303--prefix=/usr \
-			--install-layout=deb; \
+		$$py setup.py install --root=$(CURDIR)/debian/python-fb303 \
+			--prefix=/usr --install-layout=deb; \
 	done
 
 	# Perl
