--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,7 @@ Description: PHP library for fb303
 
 Package: python-fb303
 Architecture: all
+Section: python
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Python library for fb303
  A standard interface to monitoring, dynamic options and configuration,
@@ -29,6 +30,7 @@ Description: Python library for fb303
 
 Package: libfacebook-fb303-perl
 Architecture: all
+Section: perl
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Perl library for fb303
  A standard interface to monitoring, dynamic options and configuration,
@@ -36,6 +38,7 @@ Description: Perl library for fb303
 
 Package: libfb303-java
 Architecture: all
+Section: java
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Java library for fb303
  A standard interface to monitoring, dynamic options and configuration,
@@ -50,6 +53,7 @@ Description: C++ library for fb303
 
 Package: libfb303-dev
 Architecture: any
+Section: libdevel
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: C++ library for fb303 (Developement)
  A standard interface to monitoring, dynamic options and configuration,
