--- a/debian/rules
+++ b/debian/rules
@@ -11,6 +11,7 @@ override_dh_auto_configure:
 	./configure --prefix=/usr --with-thriftpath=/usr --disable-static
 	mkdir perl
 	thrift --gen perl --out perl if/fb303.thrift
+	thrift --gen php --out php if/fb303.thrift
 
 override_dh_auto_build:
 	cd cpp && make install DESTDIR=$(CURDIR)/tmp
@@ -27,3 +28,10 @@ override_dh_auto_install:
 	mkdir -p $(CURDIR)/debian/libfacebook-fb303-perl/usr/share/perl5
 	cp -r $(CURDIR)/perl/Facebook \
 		$(CURDIR)/debian/libfacebook-fb303-perl/usr/share/perl5
+
+	# PHP
+	mkdir -p $(CURDIR)/debian/libfb303-php/usr/share/php
+	cp -r $(CURDIR)/php/FB303 \
+		$(CURDIR)/debian/libfb303-php/usr/share/php
+	cp $(CURDIR)/php/FacebookBase.php \
+		$(CURDIR)/debian/libfb303-php/usr/share/php/FB303/
