--- a/debian/rules
+++ b/debian/rules
@@ -35,3 +35,6 @@ override_dh_auto_install:
 		$(CURDIR)/debian/libfb303-php/usr/share/php
 	cp $(CURDIR)/php/FacebookBase.php \
 		$(CURDIR)/debian/libfb303-php/usr/share/php/FB303/
+
+override_dh_auto_test:
+	# pass
