--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@ override_dh_auto_configure:
 
 override_dh_auto_build:
 	cd cpp && make
-	cd java && ant -Dfb303.final.name=fb303-${VERSION}
+	cd java && ant -Dfb303.final.name=fb303-${VERSION} -Dthrift.groupid=org.apache.thrift -Dversion=0.9.0
 
 override_dh_auto_install:
 	# CPP
