--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Gasol Wu <gasol.wu@gmail.com>
 Build-Depends: debhelper (>= 8),
  ant,
  default-jdk,
+ libboost-dev,
  libmaven-ant-tasks-java (>= 2.1.3),
  libthrift-java,
  libthrift-dev,
